Refactor: Remove unused manga data classes and layout, add utilities and fix api
- Removed unused data classes for `AltTitle`, `Attributes`, `AttributesX`, `AttributesXX`, `Biography`, `Description`, `DescriptionX`, `Links`, `Name`, `Relationship`, `Tag`, and `Title`.
- Removed the unused layout `latest_follows.xml`.
- Added `Utilities.kt` with `DisplayImage` composable function to manage image rendering.
- Added test `Manga` data to test the UI
- Removed preview files and instead added previews in the composable files
- Add `TagRow` composable to render the tags of a manga
- Fixed api url
- Add no description, and no title strings
- Fixed build errors
- Added a new endpoint to the api to get the manga details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Manju</string>
-    <string name="appwidget_text">No</string>
+    <string name="app_name" translatable="false">Manju</string>
     <string name="no_description_available">The discription is not currently available.</string>
+    <string name="no_title_available">Title not available.</string>
 </resources>
