--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name" translatable="false">Manju</string>
-    <string name="no_description_available">The discription is not currently available.</string>
-    <string name="no_title_available">Title not available.</string>
+    <string name="no_description_available">The discription is currently not available.</string>
+    <string name="no_title_available">The title is currently not available.</string>
 </resources>
