Feat: Add openAPI support and firebase analytics
- Added openAPI support for API interaction.
- Updated build.gradle.kts to include openAPI generator plugin and dependencies.
- Integrated Google Firebase Analytics for app analytics.
- Updated project settings and dependencies.
- Modified strings.xml to include additional resource strings.
- Updated gitignore to exclude google-services.json.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name" translatable="false">Manju</string>
     <string name="no_description_available">The discription is currently not available.</string>
     <string name="no_title_available">The title is currently not available.</string>
+    <string name="rating">Rating</string>
+    <string name="follows">Follows</string>
+    <string name="views">Views</string>
+    <string name="comments">Comments</string>
+    <string name="no_image_available">The cover is currently not available.</string>
 </resources>
