Feat: Add string resource for grid toggle state
- Added a new string resource `grid_enabled` to indicate the current state of the grid toggle (enabled or disabled).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="no_name_available">No name available.</string>
     <string name="vol">Vol.%1$s</string>
     <string name="ch">Ch.%1$s</string>
+    <string name="grid_enabled">Grid enabled: %1$s</string>
 </resources>
