--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="vol">Vol.%1$s</string>
     <string name="ch">Ch.%1$s</string>
     <string name="grid_enabled">Grid enabled: %1$s</string>
+    <string name="translator">Translator</string>
+    <string name="translators">Translators</string>
 </resources>
